--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,7 @@
-/**
- * WEBSITE: https://themefisher.com
- * TWITTER: https://twitter.com/themefisher
- * FACEBOOK: https://www.facebook.com/themefisher
- * GITHUB: https://github.com/themefisher/
- */
+/* https://themefisher.com */
 
-/*!------------------------------------------------------------------
-[MAIN STYLESHEET]
+/* [MAIN STYLESHEET] */
 
-PROJECT:	Project Name
-VERSION:	Versoin Number
--------------------------------------------------------------------*/
-/*------------------------------------------------------------------
-[TABLE OF CONTENTS]
--------------------------------------------------------------------*/
 /*  typography */
 body {
   line-height: 1.7;
