--- a/portfolio/items/gpt chatbot/styles.css
+++ b/portfolio/items/gpt chatbot/styles.css
@@ -29,7 +29,7 @@ h1 {
   border-radius: 3px;
   padding: 10px;
   cursor: pointer;
-  transition: border-color 0.3s;
+  transition: border-color 0.2s;
   background-color: #f8f9fa;
   position: relative;
 
@@ -46,6 +46,9 @@ h1 {
 
 .pdf-input:hover {
   border-color: #777;
+}
+.pdf-input.file-hover {
+  border-color: #3a7bdb;
 }
 
 /* PDF File Icon */
@@ -246,7 +249,7 @@ h1 {
 .pdf-item .pdf-name {
   /* margin-top: 5px; */
   text-align: center;
-  font-size: 10px;
+  font-size: 9px;
   position: absolute;
   bottom: 12px;
   transition: font-size 0.3s;
