--- a/portfolio/items/USA Power/styles.css
+++ b/portfolio/items/USA Power/styles.css
@@ -3,6 +3,6 @@ body {
   background-color: #202020;
   color: #f4f4f4;
 }
-.mapboxgl-ctrl-attrib-inner {
+/* .mapboxgl-ctrl-attrib-inner {
     color: black;
-}
+} */
