--- a/portfolio/items/USA Power/styles.css
+++ b/portfolio/items/USA Power/styles.css
@@ -3,6 +3,16 @@ body {
   background-color: #202020;
   color: #f4f4f4;
 }
+
 /* .mapboxgl-ctrl-attrib-inner {
     color: black;
 } */
+
+#map-a {
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+  /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
+  /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
+  /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; */
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  /* Or can add border 1px or 2px direct in index file.  */
+}
